feat [video]: Add video explore service, utilities, and video item component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 }
 
 @theme inline {
-  --color-primary: #AD2528;
+  --color-primary: #EF4444;
   --color-bg: #191B28;
   --color-border: #2A3439;
   --font-sans: var(--font-noto-sans);
